# esp32-component-bmi270

./: CMakeLists.txt  bmi270_interface.c  example.c
